correction contraste

--- a/style.css
+++ b/style.css
@@ -738,7 +738,7 @@ h4 {
     margin-top: 24px;
 }
 
-.white {
+.white{
     color: #ffffff !important;
 }
 
@@ -782,7 +782,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #F3976C;
+    /* color: #ffffff !important; */
+}
+
+.tc-orange {
+    color: #F3976C !important;
 }
 
 .btn-atomic-tangerine {
